--- a/styles/AddExpense.module.css
+++ b/styles/AddExpense.module.css
@@ -1,9 +1,32 @@
+#AddExpense{
+  width: 88vw;
+  margin-left: 12vw;
+}
 #Title{
     text-align: center;
-    width: 88vw;
-    position: absolute;
-    top: 5%;
-    right: 0;
+    margin-top: 5vh;
     font-size: 2.5vw;
     font-weight: 600;
-  }
+}
+
+#FormContainer{
+  text-align: center;
+}
+
+.FormLabel{
+  text-align: left;
+  display: inline-block;
+  width: 10vw;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.FormInput{
+  display: inline-block;
+  width: 10vw;
+}
+
+#FormButton{
+  width: 20vw;
+  height: 3vh;
+}
