--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,9 +1,10 @@
+#Home{
+  margin-left: 12vw;
+  width: 88vw;
+}
 #Title{
   text-align: center;
-  width: 88vw;
-  position: absolute;
-  top: 5%;
-  right: 0;
+  margin-top: 5vh;
   font-size: 2.5vw;
   font-weight: 600;
 }
